blockml/test/errors/01_yaml/e278/e278_one.view
view: e278_one
derived_table: |
  #standardSQL
    WITH
  SELECT  
